# Vulkan-Symbiote-Loader

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_AUDIT.md  PRIORITY2_SUMMARY.md  PRIORITY3_SUMMARY.md  README.md  architecture_design.md  build.sh  config.example.toml
compression/: CMakeLists.txt
compression/include/: Blosc2Compression.h  CompressionBackend.h  HybridCompression.h  ZFPCompression.h
compression/src/: Blosc2Compression.cpp  HybridCompression.cpp  ZFPCompression.cpp
examples/: CMakeLists.txt  benchmark.cpp
gui/: CMakeLists.txt  README.md
gui/include/vk_symbiote_gui/: SymbioteGUI.h
gui/src/: ChatSession.cpp  NativeFileDialog.cpp  SymbioteGUI.cpp  main_gui.cpp
vk_symbiote/: CMakeLists.txt  README.md
vk_symbiote/cmake/: VulkanSymbioteConfig.cmake.in
vk_symbiote/examples/: basic_inference.cpp  benchmark.cpp
vk_symbiote/include/vk_symbiote/: Common.h  ConfigManager.h  GGUFLoader.h  NomadPack.h  ShaderRuntime.h  Tokenizer.h  Utils.h  Validation.h  VitalityOracle.h  VulkanSymbioteEngine.h
vk_symbiote/shaders/: attention.comp  embedding_lookup.comp  feed_forward.comp  final_linear.comp  flash_attention.comp  fused_matmul.comp  fused_matmul_rope.comp  rms_norm.comp  sparse_attention.comp
vk_symbiote/src/: Compression.cpp  ConfigManager.cpp  GGUFLoader.cpp  NomadPack.cpp  ShaderRuntime.cpp  Tokenizer.cpp  Utils.cpp  Validation.cpp  VitalityOracle.cpp  VulkanSymbioteEngine.cpp
vk_symbiote/tests/: validation_tests.cpp
